--- a/frontend/src/Components/Users/ChatComponent/Chat.css
+++ b/frontend/src/Components/Users/ChatComponent/Chat.css
@@ -1,6 +1,6 @@
 .chat-container{
     box-shadow: 0 6px 16px 0 rgb(0 0 0 / 15%);
-    height: calc(100vh - 81px);
+    height: calc(100vh - 90px);
     padding: 0;
     display: flex;
     max-width: 1600px;
@@ -128,6 +128,7 @@
     min-height: 56px;
     background: #eaeaea;
     display: block;
+    object-fit: cover;
 }
 
 .chat-item-details{
@@ -139,7 +140,8 @@
 }
 
 .name-time{
-    display: flex;
+    /* display: flex; */
+    display: contents;
     align-items: center;
     gap: 5px;
     color: #e71575;
@@ -219,6 +221,7 @@
     width: 40px;
     height: 40px;
     background-color: #eaeaea;
+    object-fit: cover;
 }
 
 .chat-window-header-h3{
@@ -369,7 +372,14 @@
 }
 
 .message-date-sented{
-    color: #e1e1e1;
+    color: #ebebeb;
+    font-weight: 500;
+    font-size: .6875rem;
+    line-height: 1.5rem;
+}
+
+.message-date-sented-darker{
+    color: #515151;
     font-weight: 500;
     font-size: .6875rem;
     line-height: 1.5rem;
