dashboard logic implimented

--- a/frontend/src/Components/Users/Header/Header.css
+++ b/frontend/src/Components/Users/Header/Header.css
@@ -202,3 +202,27 @@
     }
 
   }
+
+
+  .search-result {
+    padding: 10px 20px;
+    cursor: pointer;
+  }
+  
+  .search-result:hover {
+    background-color: #efefef;
+  }
+
+  .results-list {
+    width: 100%;
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    box-shadow: 0px 0px 8px #ddd;
+    border-radius: 10px;
+    /* margin-top: 1rem; */
+    max-height: 300px;
+    overflow-y: auto;
+    z-index: 1;
+  }
+
